Codigo Ejemplo/1. Principios Universales de Diseño Software/1.3 Composicion vs Herencia/ejercicio/EmpresaEnvio/src/main/java/org/example/bad/EnvioNacionalStandarSinImpuesto.java
package org.example.bad;

public class EnvioNacionalStandarSinImpuesto  extends EnvioNacionalStandard{
    @Override
    public double calcularCostoEnvio() {
        return super.calcularCostoEnvio()+0;
    }
}
